--- a/styles.css
+++ b/styles.css
@@ -5,12 +5,13 @@ html {
 
 body {
     width: 99.9vw;
-    height: 99.9vh;
+    height: 100vh;
     overflow: hidden;
     margin: 0;
-    background-image: url("images/bg.png");
-    background-repeat: repeat-x;
-    background-size: auto;
+    background-image: url("images/Panther\ Aqua\ Blue.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
 }
 
 #myDiv {
@@ -23,10 +24,11 @@ body {
 .toolBar {
     width: 100%;
     height: 22px;
+    display: flex;
     position: absolute;
     z-index: 2;
-    background-image: linear-gradient(to bottom, rgba(26, 28, 37, .8), rgba(24, 25, 32, .8));
-    border-bottom: 1px solid rgba(4, 4, 6, 0.8);
+    background-image: linear-gradient(to bottom, rgba(26, 28, 37, .7), rgba(24, 25, 32, .7));
+    border-bottom: 1px solid rgba(4, 4, 6, .7);
     outline: none;
 }
 
@@ -37,18 +39,21 @@ body {
     border: 1px solid rgb(81, 82, 84);
     border-radius: 5px;
     background-color: rgb(44, 45, 46);
+    box-shadow: 0px 10px 25px rgb(0, 0, 0, 0.5);
+
+    resize: both;
 }
 
 .windowBar {
     width: 100%;
     height: 24px;
     background-color: linear-gradient(to bottom, rgb(57, 57, 59), rgb(46, 46, 48));
-    border-bottom: 1px solid rgb(18, 18, 19)
+    border-bottom: 1px solid rgb(18, 18, 19);
 }
 
 .window-title {
     width: 100%;
-    height: 99%;
+    height: 5%;
     top: 3px;
     text-align: center;
     position: absolute;
@@ -85,4 +90,12 @@ body {
     -webkit-touch-callout: none;
     -ms-user-select: none;
     user-select: none
+}
+
+/* Pointer style */
+.ew-resize {
+    cursor: ew-resize;
+}
+.ns-resize {
+    cursor: ns-resize;
 }
