--- a/styles.css
+++ b/styles.css
@@ -8,10 +8,7 @@ body {
     height: 100vh;
     overflow: hidden;
     margin: 0;
-    background-image: url("images/Panther\ Aqua\ Blue.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: 50% 50%;
+    background: radial-gradient(rgb(41, 41, 41), rgb(34, 35, 37));
 }
 
 #myDiv {
@@ -27,7 +24,7 @@ body {
     display: flex;
     position: absolute;
     z-index: 2;
-    background-image: linear-gradient(to bottom, rgba(26, 28, 37, .7), rgba(24, 25, 32, .7));
+    background-image: linear-gradient(to bottom, rgba(26, 28, 32, .7), rgba(24, 25, 32, .7));
     border-bottom: 1px solid rgba(4, 4, 6, .7);
     outline: none;
 }
